# invest-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_m1_users_subscriptions_jobs.py  (+18 more)
app/: __main__.py  cli.py  config.py  main.py
config/: company_universe_v1.json  company_universe_v2.json  investable_countries_v1.json  sector_macro_sensitivity_v1.json
scripts/: e2e_country.py  gen_excel_deduped.py  seed_sweep.py  seed_sweep_no_india.py  train_and_save_seed32.py
tests/: test_absolute_score.py  test_artefact_store.py  test_auth.py  test_backtest.py  test_candidate_matcher.py  test_company_chart.py  test_company_scoring.py  test_company_search.py  test_contrast.py  test_country_api.py  test_country_models.py  test_dataset.py  test_export_features.py  test_export_training.py  test_feature_scorer.py  test_features.py  test_fmp_fundamentals.py  test_fmp_rate_limiter.py  test_fmp_sync.py  test_forward_scanner.py  test_freshness.py  test_industry_scoring.py  test_ingest.py  test_jobs.py  test_listing_dedup.py  test_listing_quality.py  test_model.py  test_model_training.py  test_models.py  test_parquet_dataset.py  test_parquet_scorer.py  test_prediction_score_api.py  test_preload_fmp.py  test_price_sync.py  test_profile_rescore.py  test_profile_schema.py  test_recommendations.py  test_scheduler_schedule.py  test_score_sync.py  test_scoring.py  (+5 more)
web/: index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+211 files in other folders)
