[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "stripe>=11",
    "typer>=0.15",
    "sse-starlette>=2.2",
    "psycopg2-binary>=2.9",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx",
]

[project.scripts]
investagent = "app.cli:app_cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
